--- a/app/src/main/res/menu/menu_website.xml
+++ b/app/src/main/res/menu/menu_website.xml
@@ -21,11 +21,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.activities.WebsiteActivity">
     <item
-        android:id="@+id/action_open_in_browser"
-        android:orderInCategory="100"
-        android:title="@string/action_open_in_browser"
-        app:showAsAction="never" />
-    <item
         android:title="@string/action_share"
         android:id="@+id/action_share"
         android:orderInCategory="100"
@@ -42,4 +37,14 @@
         android:title="@string/menu_website"
         app:iconTint="@android:color/white"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_open_in_browser"
+        android:orderInCategory="100"
+        android:title="@string/action_open_in_browser"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/website_close"
+        android:orderInCategory="100"
+        android:title="@string/close"
+        app:showAsAction="never" />
 </menu>
