fixes in room plan

--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -24,7 +24,7 @@
         <change>Raumplan hinzugefügt</change>
         <change>Durchsuchen der Website hinzugefügt</change>
         <change>Neue Benachrichtigung (und passende Einstellungen)</change>
-        <change>Startbildschirm-Shortcuts hinzugefügt</change>
+        <change>App-Icon-Shortcuts hinzugefügt</change>
         <change>Wendelsteiner Welle hinzugefügt (Deaktiviert -> Einstellungen)</change>
         <change>Herunterwischen zum Aktualisieren</change>
         <change>Einstellungen für Home-Screen Widgets hinzugefügt</change>
