--- a/app/src/main/res/layout/list_website_search_entry.xml
+++ b/app/src/main/res/layout/list_website_search_entry.xml
@@ -42,17 +42,18 @@
             android:id="@+id/website_search_level2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="10dp"
+            android:textStyle="bold"
             android:text="Projekte"
-            android:textColor="?android:attr/textColorPrimary"
             android:textSize="20sp" />
 
         <TextView
             android:id="@+id/website_search_level3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="25dp"
             android:gravity="start|center"
+            android:textColor="?android:attr/textColorPrimary"
             android:text="SoR"
             android:textSize="18sp" />
     </LinearLayout>
