--- a/app/src/main/res/menu/menu_website.xml
+++ b/app/src/main/res/menu/menu_website.xml
@@ -30,6 +30,7 @@
         android:id="@+id/action_website_search"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/action_search"
+        app:iconTint="@android:color/white"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_website"
