--- a/app/src/main/res/layout/timetable_activity_main.xml
+++ b/app/src/main/res/layout/timetable_activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/timetable_nav_header_main"
+        app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/timetable_activity_main_drawer" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
