--- a/app/src/main/res/layout/timetable_activity_note_info.xml
+++ b/app/src/main/res/layout/timetable_activity_note_info.xml
@@ -3,7 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.ulan.timetable.activities.NoteInfoActivity">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="?attr/popupMenuStyle" />
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <com.ulan.timetable.utils.LinedEditText
         android:id="@+id/edittextNote"
