--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -21,10 +20,11 @@
     <release
         version="1.2.0"
         versioncode="120">
+        <change>Selbstprogrammierten Stundenplan hinzugefügt</change>
         <change>Raumplan hinzugefügt</change>
-        <change>Durchsuchen der Website hinzugefügt</change>
         <change>Neue Benachrichtigung (und passende Einstellungen)</change>
         <change>App-Icon-Shortcuts hinzugefügt</change>
+        <change>Durchsuchen der Website hinzugefügt</change>
         <change>Wendelsteiner Welle hinzugefügt (Deaktiviert -> Einstellungen)</change>
         <change>Herunterwischen zum Aktualisieren</change>
         <change>Einstellungen für Home-Screen Widgets hinzugefügt</change>
