--- a/app/src/main/res/layout/timetable_fragment_weekday.xml
+++ b/app/src/main/res/layout/timetable_fragment_weekday.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragments.MondayFragment">
+    android:layout_height="match_parent">
 
     <ListView
-        android:id="@+id/mondaylist"
+        android:id="@+id/timetable_daylist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:listSelector="@android:color/transparent"
