--- a/app/src/main/res/menu/timetable_main.xml
+++ b/app/src/main/res/menu/timetable_main.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_substitutionIntegration"
+        android:icon="@drawable/ic_assignment_late"
+        android:orderInCategory="100"
+        android:title="@string/integrate_substitution_in_timetable"
+        android:visible="false"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
