--- a/app/src/main/res/layout/timetable_dialog_add_exam.xml
+++ b/app/src/main/res/layout/timetable_dialog_add_exam.xml
@@ -136,9 +136,9 @@
             android:id="@+id/select_color"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
+            android:layout_marginStart="50dp"
             android:layout_marginTop="5dp"
-            android:layout_marginRight="50dp"
+            android:layout_marginEnd="50dp"
             android:layout_marginBottom="5dp"
             android:background="@color/white"
             android:text="@string/select_color"
