--- a/app/src/main/res/layout/timetable_listview_exams_adapter.xml
+++ b/app/src/main/res/layout/timetable_listview_exams_adapter.xml
@@ -19,9 +19,9 @@
             android:background="@drawable/card_background_selector"
             android:descendantFocusability="afterDescendants"
             android:orientation="vertical"
-            android:paddingLeft="15dp"
+            android:paddingStart="15dp"
             android:paddingTop="15dp"
-            android:paddingRight="15dp"
+            android:paddingEnd="15dp"
             android:paddingBottom="15dp">
 
             <TextView
