added teacherlist activity

--- a/app/src/main/res/layout/timetable_listview_exams_adapter.xml
+++ b/app/src/main/res/layout/timetable_listview_exams_adapter.xml
@@ -49,7 +49,7 @@
                 android:layout_marginStart="2dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="2dp"
-                android:background="?android:attr/textColorPrimary"
+                android:background="@android:color/black"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toBottomOf="@id/subjectexams" />
