--- a/app/src/main/res/layout/timetable_dialog_add_exam.xml
+++ b/app/src/main/res/layout/timetable_dialog_add_exam.xml
@@ -92,6 +92,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".7"
+            android:background="?android:attr/selectableItemBackground"
             android:text="@string/select_date"
             android:textAlignment="center"
             android:textAllCaps="true"
@@ -120,6 +121,7 @@
             android:layout_weight=".7"
             android:text="@string/select_time"
             android:textAlignment="center"
+            android:background="?android:attr/selectableItemBackground"
             android:textAllCaps="true"
             android:textColor="?android:attr/textColorPrimary"
             android:textSize="18sp"
