--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -67,4 +67,6 @@
     <color name="notification_icon_background_substitution">#fbdd0d</color>
     <!--  FFC93E fbdd0d  -->
     <color name="notification_icon_nothing_background">#3AC540</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
