--- a/app/src/main/res/layout/activity_substitution_time_table.xml
+++ b/app/src/main/res/layout/activity_substitution_time_table.xml
@@ -22,7 +22,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SubstitutionTimeTableActivity">
+    tools:context=".ui.activities.SubstitutionTimeTableActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
