--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -46,10 +45,10 @@
                 android:id="@+id/main_profile_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:popupTheme="?attr/popupMenuStyle"
-                android:visibility="gone"
                 android:enabled="false"
-                android:popupBackground="?android:attr/windowBackground" />
+                android:popupBackground="?android:attr/windowBackground"
+                android:visibility="gone"
+                app:popupTheme="?attr/popupMenuStyle" />
         </RelativeLayout>
 
 
@@ -57,8 +56,15 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="3dp"
             android:background="?attr/colorPrimary"
-            android:visibility="gone" />
+            android:clipToPadding="false"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            android:visibility="gone"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="?android:attr/textColorPrimary"
+            app:tabPaddingEnd="20dp"
+            app:tabPaddingStart="20dp" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
