--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -20,7 +20,7 @@
     <release
         version="1.2.0"
         versioncode="120">
-        <change>Selbstprogrammierten Stundenplan hinzugefügt</change>
+        <change>Selbstprogrammierter Stundenplan mit integriertem Vertretungen</change>
         <change>Raumplan hinzugefügt</change>
         <change>Neue Benachrichtigung (und passende Einstellungen)</change>
         <change>App-Icon-Shortcuts hinzugefügt</change>
