--- a/app/src/main/res/drawable/background_shape.xml
+++ b/app/src/main/res/drawable/background_shape.xml
@@ -22,5 +22,5 @@
     <solid android:color="@android:color/transparent" />
     <stroke
         android:width="1dip"
-        android:color="?android:attr/textColorPrimary" />
+        android:color="#FFFFFF" />
 </shape>
