--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -69,7 +69,7 @@
                 android:layout_gravity="center"
                 android:checked="true"
                 android:gravity="center"
-                android:text="Automatisch auf Updates prüfen"
+                android:text="@string/automatic_update_check"
                 android:textColor="?android:attr/textColorSecondary"
                 android:layout_marginEnd="15dp" />
 
@@ -78,7 +78,7 @@
                 style="@style/Widget.AppCompat.Button.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="URL" />
+                android:text="@string/url" />
         </LinearLayout>
 
         <TextView
