added intelligent hide in widget, some fixes in searches

--- a/app/src/main/res/layout/fragment_search_template.xml
+++ b/app/src/main/res/layout/fragment_search_template.xml
@@ -33,7 +33,8 @@
             android:id="@+id/search_template_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/teacher_search_teacher_list" />
+            android:hint="@string/teacher_search_teacher_list"
+            android:imeOptions="actionDone" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <ListView
