--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,8 +65,12 @@
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="SplashTheme" parent="AppTheme">
-        <item name="android:windowBackground">@drawable/launch_screen</item>
+    <style name="SplashThemeMain" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash_screen_main</item>
+    </style>
+
+    <style name="SplashThemeTimeTable" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash_screen_timetable</item>
     </style>
 
     <style name="AboutLibsTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
