added do not disturb turn on if lesson

--- a/app/src/main/res/layout/timetable_dialog_add_exam.xml
+++ b/app/src/main/res/layout/timetable_dialog_add_exam.xml
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".7"
             android:background="?android:attr/selectableItemBackground"
-            android:text="@string/select_date"
+            android:text="@string/choose_date"
             android:textAlignment="center"
             android:textAllCaps="true"
             android:textColor="?android:attr/textColorPrimary"
