--- a/app/src/main/res/menu/timetable_activity_main_drawer.xml
+++ b/app/src/main/res/menu/timetable_activity_main_drawer.xml
@@ -10,16 +10,16 @@
         <item
             android:id="@+id/exams"
             android:icon="@drawable/ic_school_black_24dp"
-            android:title="@string/exams" />
+            android:title="@string/exams_activity_title" />
 
         <item
             android:id="@+id/homework"
             android:icon="@drawable/ic_book_black_24dp"
-            android:title="@string/homeworks" />
+            android:title="@string/homeworks_activity_title" />
         <item
             android:id="@+id/notes"
             android:icon="@drawable/ic_event_note_black_24dp"
-            android:title="@string/notes" />
+            android:title="@string/notes_activity_title" />
     </group>
 
     <group
