--- a/app/src/main/res/xml/timetable_settings.xml
+++ b/app/src/main/res/xml/timetable_settings.xml
@@ -16,6 +16,11 @@
         android:title="@string/do_not_disturb_setting" />
 
     <SwitchPreferenceCompat
+        android:defaultValue="false"
+        android:key="do_not_disturb_turn_off"
+        android:title="@string/do_not_disturb_turn_off" />
+
+    <SwitchPreferenceCompat
         android:defaultValue="true"
         android:icon="@drawable/ic_slideshow_black_24dp"
         android:key="timetableNotif"
