--- a/app/src/main/res/layout/timetable_listview_homeworks_adapter.xml
+++ b/app/src/main/res/layout/timetable_listview_homeworks_adapter.xml
@@ -90,7 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/desctiption"
+                android:text="@string/description"
                 android:textAlignment="center"
                 android:textAllCaps="false"
                 android:textColor="?android:attr/textColorPrimary"
