--- a/app/src/main/res/layout/timetable_dialog_add_subject.xml
+++ b/app/src/main/res/layout/timetable_dialog_add_subject.xml
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_weight=".7"
             android:imeOptions="actionDone"
-            android:inputType="number"
+            android:digits="@string/room_allowed_digits"
             android:singleLine="true"
             android:textColor="?android:attr/textColorPrimary" />
     </LinearLayout>
