--- a/app/src/main/res/xml/preferences_substitutionplan.xml
+++ b/app/src/main/res/xml/preferences_substitutionplan.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -42,7 +41,8 @@
         android:defaultValue="true"
         android:key="summarize_old"
         android:title="@string/also_at_old_design"
-        app:iconSpaceReserved="true" />
+        app:iconSpaceReserved="true"
+        app:isPreferenceVisible="false" />
     <SwitchPreference
         android:defaultValue="false"
         android:key="week_dates"
