little changes in notification

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,7 +62,8 @@
     <!-- Notification -->
     <color name="notification_icon_text_omitted">@android:color/black</color>
     <color name="notification_icon_background_omitted">#BAFF0000</color>
-    <color name="notification_icon_text_substitution">#525252</color>
+    <!--    <color name="notification_icon_text_substitution">#525252</color>-->
+    <color name="notification_icon_text_substitution">@android:color/black</color>
     <color name="notification_icon_background_substitution">#fbdd0d</color>
     <!--  FFC93E fbdd0d  -->
     <color name="notification_icon_nothing_background">#3AC540</color>
