--- a/app/src/main/res/menu/activity_drawer_main.xml
+++ b/app/src/main/res/menu/activity_drawer_main.xml
@@ -20,8 +20,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <item android:title="@string/menu_category_substitution">
-        <menu>
+    <!--    <item android:title="@string/menu_category_substitution">-->
+    <!--        <menu>-->
             <group android:checkableBehavior="single">
                 <item
                     android:id="@+id/nav_at_one_glance"
@@ -54,8 +54,8 @@
                     android:icon="@drawable/ic_timetable"
                     android:title="@string/menu_timetable" />
             </group>
-        </menu>
-    </item>
+    <!--        </menu>-->
+    <!--    </item>-->
 
     <item android:title="@string/menu_category_school">
         <menu>
