--- a/app/src/main/res/layout/widget_summary.xml
+++ b/app/src/main/res/layout/widget_summary.xml
@@ -18,6 +18,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widget_summary_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -47,5 +48,6 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorWidgetForeground"
         android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:ignore="HardcodedText" />
 </LinearLayout>
